Added the doors

--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
     <script>
         alert('here');
     </script>
+
+<body>
+    <div>Door 1</div>
+    <div>Door 2</div>
+    <div>Door 3</div>
+</body>
 </head>
