Forgot some HTML syntax and changed initial function to load after HTML loads.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<html>
+
 <head>
     <script>
-        alert('here');
+        window.onload = function () {
+            alert('here');
+        };
     </script>
+
+</head>
 
 <body>
     <div>Door 1</div>
     <div>Door 2</div>
     <div>Door 3</div>
 </body>
-</head>
+
+</html>
