--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
     <script>
         window.onload = function () {
-            alert('here');
+            // alert('here');
         };
     </script>
-
+    <style>
+        .door {
+            background-color: blue;
+            width: 100;
+            height: 100;
+            margin: 5;
+        }
+    </style>
 </head>
 
 <body>
-    <div>Door 1</div>
-    <div>Door 2</div>
-    <div>Door 3</div>
+    <div class="door">Door 1</div>
+    <div class="door">Door 2</div>
+    <div class="door">Door 3</div>
 </body>
 
 </html>
