--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         window.onload = function () {
             // alert('here');
         };
+        function doorClicked() {
+            alert('door clicked');
+        }
     </script>
     <style>
         .door {
@@ -13,13 +16,27 @@
             height: 100;
             margin: 5;
         }
+
+        .doorWinner {
+            background-color: green;
+            width: 100;
+            height: 100;
+            margin: 5;
+        }
+
+        .doorLoser {
+            background-color: red;
+            width: 100;
+            height: 100;
+            margin: 5;
+        }
     </style>
 </head>
 
 <body>
-    <div class="door">Door 1</div>
-    <div class="door">Door 2</div>
-    <div class="door">Door 3</div>
+    <div id="door1" class="door" onclick="doorClicked();">Door 1</div>
+    <div id="door2" class="door" onclick="doorClicked();">Door 2</div>
+    <div id="door3" class="door" onclick="doorClicked();">Door 3</div>
 </body>
 
 </html>
