Added button to restart game.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 </head>
 
 <body>
+    <button onclick="initGame()">Restart</button>
     <div id="door1" class="door" onclick="doorClicked();">Door 1</div>
     <div id="door2" class="door" onclick="doorClicked();">Door 2</div>
     <div id="door3" class="door" onclick="doorClicked();">Door 3</div>
