--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 
 <body>
 <div>I had to fork your repo from my git account.  Then cloned my repo on my machine and then changed the repo and checked it into my account.  I want to get this in your repo so I created a pull request.  I think this is different when we do VisualStudio.com.
+    Do I need to change something?
 </div>
     <button onclick="restartGame()">Restart</button>
     <div id="door1" onclick="doorClicked();">Door 1</div>
